2457 - fix formatting issues in upgrade guide

--- a/downstream/modules/platform/proc-account-linking.adoc
+++ b/downstream/modules/platform/proc-account-linking.adoc
@@ -47,4 +47,4 @@ If you log into {PlatformNameShort} for the first time and are prompted to chang
 .A diagram of the account linking flow
 image:account-linking-flow.png[Account linking flow]
 
-After you have migrated your user account, you can manage your account from the menu:Access Management[] menu. See link:{URLCentralAuth}/gw-managing-access[Managing access with role based access control]. 
+After you have migrated your user account, you can manage your account from the *Access Management* menu. See link:{URLCentralAuth}/gw-managing-access[Managing access with role based access control]. 
