--- a/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
+++ b/downstream/assemblies/eda/assembly-eda-set-up-rhaap-credential.adoc
@@ -2,6 +2,14 @@
 
 = {PlatformName} credential
 
-The {PlatformName} credential type can connect to {ControllerName} through the use of an {ControllerName} URL and a username and password. After you have created this credential type, it can be attached to a rulebook and used to run rulebook activations.  
+When {EDAcontroller} is deployed on {PlatformNameShort} {PlatformVers}, you can create a {PlatformName} credential to connect to {ControllerName} through the use of an {ControllerName} URL and a username and password. After it has been created, you can attach the {PlatformName} credential to a rulebook and use it to run rulebook activations. These credentials provide a simple way to configure communication between {ControllerName} and {EDAcontroller}, enabling your rulebooks to launch jobs.
 
+[NOTE]
+====
+If you deployed {EDAcontroller} with {PlatformNameShort} 2.4, you probably used controller tokens to connect {ControllerName} and {EDAcontroller}. These controller tokens have been deprecated in {PlatformNameShort} {PlatformVers}. See Replacing controller tokens in Red Hat Ansible Automation Platform 2.5 for more information.
+====
+
+include::eda/con-replacing-controller-tokens.adoc[leveloffset=+1]
+include::eda/proc-eda-delete-controller-token.adoc[leveloffset=+2]
+include::eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc[leveloffset=+2]
 include::eda/proc-eda-set-up-rhaap-credential.adoc[leveloffset=+1]
