AAP-34814 - update application OAuth paths

--- a/downstream/modules/platform/ref-controller-app-token-functions.adoc
+++ b/downstream/modules/platform/ref-controller-app-token-functions.adoc
@@ -2,4 +2,4 @@
 
 = Application token functions
 
-The `refresh` and `revoke` functions associated with tokens, for tokens at the `/api/o/` endpoints can currently only be carried out with application tokens.
+The `refresh` and `revoke` functions associated with tokens, for tokens at the `/o/` endpoints can currently only be carried out with application tokens.
