--- a/downstream/modules/platform/ref-controller-revoke-access-token.adoc
+++ b/downstream/modules/platform/ref-controller-revoke-access-token.adoc
@@ -2,7 +2,7 @@
 
 = Revoke an access token
 
-You can revoke an access token by deleting the token in the platform UI, or by using the `/api/o/revoke-token/` endpoint.
+You can revoke an access token by deleting the token in the platform UI, or by using the `/o/revoke-token/` endpoint.
 
 Revoking an access token by this method is the same as deleting the token resource object, but it enables you to delete a token by providing its token value, and the associated `client_id` (and `client_secret` if the application is `confidential`). For example:
 
@@ -10,13 +10,13 @@ Revoking an access token by this method is the same as deleting the token resour
 ----
 curl -X POST -d "token=rQONsve372fQwuc2pn76k3IHDCYpi7" \
 -u "gwSPoasWSdNkMDtBN3Hu2WYQpPWCO9SwUEsKK22l:fI6ZpfocHYBGfm1tP92r0yIgCyfRdDQt0Tos9L8a4fNsJjQQMwp9569eIaUBsaVDgt2eiwOGe0bg5m5vCSstClZmtdy359RVx2rQK5YlIWyPlrolpt2LEpVeKXWaiybo" \
-http://<controller>/api/o/revoke_token/ -i
+http://<gateway>/o/revoke_token/ -i
 ----
 
 [NOTE]
 ====
 * The special OAuth 2 endpoints only support using the `x-www-form-urlencoded` *Content-type*, so as a result, none of the
-`api/o/*` endpoints accept `application/json`.
+`/o/*` endpoints accept `application/json`.
 * The *Allow External Users to Create Oauth2 Tokens* (`ALLOW_OAUTH2_FOR_EXTERNAL_USERS` in the API) setting is disabled by default. 
 External users refer to users authenticated externally with a service such as LDAP, or any of the other SSO services. 
 This setting ensures external users cannot create their own tokens. 
@@ -27,4 +27,4 @@ This setting can be configured from the {MenuSetGateway} menu.
 Alternatively, to revoke OAuth2 tokens, you can use the `manage` utility, see xref:ref-controller-revoke-oauth2-token[Revoke oauth2 tokens].
 
 On success, a response of `200 OK` is displayed. 
-Verify the deletion by checking whether the token is present in the `/api/v2/tokens/` endpoint.
+Verify the deletion by checking whether the token is present in the `gateway/api/v1/tokens/` endpoint.
