--- a/downstream/modules/platform/ref-controller-refresh-existing-token.adoc
+++ b/downstream/modules/platform/ref-controller-refresh-existing-token.adoc
@@ -19,14 +19,14 @@ The following example shows an existing access token with a refresh token provid
 }
 ----
 
-The `/api/o/token/` endpoint is used for refreshing the access token:
+The `/o/token/` endpoint is used for refreshing the access token:
 
 [literal, options="nowrap" subs="+attributes"]
 ----
 curl -X POST \
     -d "grant_type=refresh_token&refresh_token=AL0NK9TTpv0qp54dGbC4VUZtsZ9r8z" \
     -u "gwSPoasWSdNkMDtBN3Hu2WYQpPWCO9SwUEsKK22l:fI6ZpfocHYBGfm1tP92r0yIgCyfRdDQt0Tos9L8a4fNsJjQQMwp9569eIaUBsaVDgt2eiwOGe0bg5m5vCSstClZmtdy359RVx2rQK5YlIWyPlrolpt2LEpVeKXWaiybo" \
-    http://<controller>/api/o/token/ -i
+    http://<gateway>/o/token/ -i
 ----
 
 Where `refresh_token` is provided by `refresh_token` field of the preceding access token. 
@@ -36,7 +36,7 @@ The authentication information is of format `<client_id>:<client_secret>`, where
 [NOTE]
 ====
 The special OAuth 2 endpoints only support using the `x-www-form-urlencoded` *Content-type*, so as a result, none of the
-`api/o/*` endpoints accept `application/json`.
+`/o/*` endpoints accept `application/json`.
 ====
 
 On success, a response displays in JSON format containing the new (refreshed) access token with the same scope information as the previous one:
@@ -60,4 +60,4 @@ Strict-Transport-Security: max-age=15768000
 
 The refresh operation replaces the existing token by deleting the original and then immediately creating a new token with the same scope and related application as the original one. 
 
-Verify that the new token is present and the old one is deleted in the `/api/v2/tokens/` endpoint.
+Verify that the new token is present and the old one is deleted in the `gateway/api/v1/tokens/` endpoint.
