Added SME feedback changes

--- a/downstream/modules/platform/ref-controller-token-session-management.adoc
+++ b/downstream/modules/platform/ref-controller-token-session-management.adoc
@@ -2,7 +2,7 @@
 
 = Token and session management
 
-{ControllerNameStart} supports the following commands for OAuth2 token management:
+{PlatformNameShort} supports the following commands for OAuth2 token management:
 
 * xref:ref-controller-create-oauth2-token[`create_oauth2_token`]
 * xref:ref-controller-revoke-oauth2-token[`revoke_oauth2_tokens`]
