--- a/downstream/modules/platform/proc-controller-create-application.adoc
+++ b/downstream/modules/platform/proc-controller-create-application.adoc
@@ -2,7 +2,7 @@
 
 = Creating a new application
 
-When integrating an external web application with {ControllerName} the web application might need to create OAuth2 tokens on behalf of users of the web application.
+When integrating an external web application with {PlatformNameShort}, the web application might need to create OAuth2 tokens on behalf of users of the web application.
 
 Creating an application with the Authorization Code grant type is the preferred way to do this for the following reasons:
 
