AAP-29905 Updates from SME review of 2nd draft of migration to RHAAP content

--- a/downstream/modules/eda/proc-eda-delete-controller-token.adoc
+++ b/downstream/modules/eda/proc-eda-delete-controller-token.adoc
@@ -4,6 +4,9 @@
 
 The first step in switching to {PlatformName} credentials is to delete any existing controller tokens.
 
+.Prerequisites
+* You have deleted all rulebook activations that use controller tokens.
+
 .Procedure
 
 . Log in to the {PlatformNameShort} Dashboard.
@@ -12,4 +15,4 @@ The first step in switching to {PlatformName} credentials is to delete any exist
 . Select the *Tokens* tab.
 . Delete all of your previous controller tokens. 
 
-After you have deleted your existing controllor tokens, you must delete any rulebook activations that were associated with these controller tokens.
+After deleting the controller tokens and rulebook activations, proceed with xref:eda-set-up-rhaap-credential[Setting up a {PlatformName} credential].
