--- a/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
+++ b/downstream/modules/eda/proc-eda-delete-rulebook-activations-with-cont-tokens.adoc
@@ -10,9 +10,12 @@ After deleting your controller tokens, you must delete the rulebook activations 
 
 .Procedure
 
+. Log in to the {Ansible Automation Platform} Dashboard.
+. From the top navigation panel, select {MenuADRulebookActivations}.
+. Select the rulebook activations that have controller tokens.
 . Select the btn:[More Actions] icon *{MoreActionsIcon}* next to the *Rulebook Activation enabled/disabled* toggle.
 . Select btn:[Delete rulebook activation].
 . In the window, select btn:[Yes, I confirm that I want to delete these X rulebook activations].
 . Select btn:[Delete rulebook activations].
 
-After deleting the controller tokens and rulebook activations, proceed with xref:eda-set-up-rhaap-credential[Setting up a {PlatformName} credential]
+
