--- a/downstream/assemblies/platform/assembly-aap-architecture.adoc
+++ b/downstream/assemblies/platform/assembly-aap-architecture.adoc
@@ -2,9 +2,9 @@
 [id='aap_architecture']
 = {PlatformName} Architecture
 
-Red Hat recommends that customers always deploy all components of {PlatformNameShort} so that all features and capabilities are available for use without the need to take further action.
+Deploy all components of {PlatformNameShort} so that all features and capabilities are available for use without the need to take further action.
 
-Red Hat tests and recommends installing {PlatformNameShort} {PlatformVers} based on a defined set of infrastructure topologies or reference architectures. Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. Organizations or deployments that are resource constrained can use a "growth" topology.
+Red Hat tests the installation of {PlatformNameShort} {PlatformVers} based on a defined set of infrastructure topologies or reference architectures. Enterprise organizations should use one of the enterprise topologies for production deployments to ensure the highest level of uptime, performance, and continued scalability. Organizations or deployments that are resource constrained can use a "growth" topology.
 
 The following section provides a comprehensive architectural example of an {PlatformNameShort} deployment.
 
