--- a/downstream/modules/platform/ref-containerized-troubleshoot-ref.adoc
+++ b/downstream/modules/platform/ref-containerized-troubleshoot-ref.adoc
@@ -4,7 +4,7 @@
 
 .Can you give details of the architecture for the {PlatformNameShort} containerized design?
 
-We use as much of the underlying native RHEL technology as possible. Podman is used for the container runtime and management of services. 
+We use as much of the underlying native {RHEL} technology as possible. Podman is used for the container runtime and management of services. 
 
 Use `podman ps` to list the running containers on the system:
 
